[package]
name = "regev-pqc"
version = "0.1.0"
edition = "2021"
description = "An implementation of Regev's Lattice-Based Encryption scheme"
keywords = ["cryptography", "lattice", "PQC", "encryption"]
authors = ["tony riemer <driemworks@idealabs.network>"]

[dependencies]
rand = "0.8.5"
#ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
#getrandom = { version = "0.2", features = ["js"] }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rug = "1.22"
nalgebra = "0.32.3"
